changed user id field to username

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</div>
 			<div class="formfield">
 				<form action="" method="">
-					<input type="text" id="userID" name="userID" placeholder="Enter your UserID" />
+					<input type="text" id="username" name="username" placeholder="Enter your uniqueusername" />
 					<button type="submit">Enter</button>
 				</form>
 			</div>
