started implementing user registration controller

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<h2 class="title">InfoTech Game</h2>
 			</div>
 			<div class="formfield">
-				<form action="" method="">
+				<form action="/index.php" method="POST">
 					<input type="text" id="username" name="username" placeholder="Enter your uniqueusername" />
-					<button type="submit">Enter</button>
+					<input class="btn" type="submit" name="submit" value="Enter" />
 				</form>
 			</div>
 		</div>
